:bug: Fix filters overflow

--- a/app/theme.sass
+++ b/app/theme.sass
@@ -98,6 +98,7 @@ footer
     display: flex
     flex-direction: row-reverse
     #filters
+      max-width: 20vw
       padding-left: 1.5rem
       padding-top: 1rem
 
